syntax = "proto3";
package iot.devicecontrol;
import "types.proto";

service DeviceControlService{
    rpc ControlDevice(DeviceControlRequest) returns (DeviceControlResponse);
};

message DeviceControlRequest{
    string capability = 2;
}

message DeviceControlResponse{
}
